- fixes - added support for -s/--scanners option and the ability to enable or disable scanners in scanners.yml
- updated README.md

fixes

--- a/scanners.yml
+++ b/scanners.yml
@@ -24,11 +24,11 @@ severity-mappings:
   MEDIUM: 3.MEDIUM
   HIGH: 4.HIGH
   CRITICAL: 5.CRITICAL
-
+  #DEFCON1: 5.CRITICAL
 plugins:
   snyk:
     enabled:
-      False
+      True
     command_line:
       - ./snyk-scanner.sh
     results_root:
