addressed clair issue https://github.com/arminc/clair-scanner/issues/63 tidying up of shell scripts

--- a/scanners.yml
+++ b/scanners.yml
@@ -68,7 +68,7 @@ plugins:
       - ./clair-scanner-run.sh
       - --report=clair.json
       - --clair=http://127.0.0.1:6060
-      - --ip=localhost
+      - --ip=host.docker.internal 
     results_root:
       vulnerabilities
     mappings:
