- fixes - added support for -s/--scanners option and the ability to enable or disable scanners in scanners.yml
- updated README.md

fixes snyk issues - updated README.md

--- a/scanners.yml
+++ b/scanners.yml
@@ -27,7 +27,7 @@ severity-mappings:
   MEDIUM: 3.MEDIUM
   HIGH: 4.HIGH
   CRITICAL: 5.CRITICAL
-  #DEFCON1: 5.CRITICAL
+  DEFCON1: 5.CRITICAL
 plugins:
   snyk:
     enabled:
@@ -68,7 +68,6 @@ plugins:
       - ./clair-scanner-run.sh
       - --report=clair.json
       - --clair=http://127.0.0.1:6060
-      - --ip=host.docker.internal 
     results_root:
       vulnerabilities
     mappings:
